use null as default values and test failing tests